Removed some comments

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -30,10 +30,6 @@
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self,agents=None,board_dimensions=None,box_positions=None,discharge_positions=None):\n",
-    "        \"\"\"\n",
-    "        The __init__ function is called when the class is instantiated.\n",
-    "        It sets the sender, receiver, performative and content of the message.\n",
-    "        \"\"\"\n",
     "        self.agents = agents\n",
     "        self.board_dimensions = board_dimensions\n",
     "        self.box_positions = box_positions\n",
@@ -42,7 +38,7 @@
     "    def __str__(self):\n",
     "        \"\"\"\n",
     "        The __str__ function is called when the class is converted to a string.\n",
-    "        It returns a string representation of the move.\n",
+    "        It returns a string representation of the InitialPosition.\n",
     "        \"\"\"\n",
     "        return f\"\\n\\\n",
     "        agents: {self.agents}, \\n\\\n",
@@ -58,18 +54,9 @@
    "outputs": [],
    "source": [
     "class Move():\n",
-    "    \"\"\"\n",
-    "    The message class is used to wrap messages and send messages between agents.\n",
-    "    It also contains the environment buffer that stores all messages.\n",
-    "    \"\"\"\n",
-    "    # environment_buffer = [] # The environment buffer\n",
     "    rounds = []\n",
     "    curr_round = -1\n",
     "    def __init__(self,agent_id=None,action=None,cell=None,looking_direction=None):\n",
-    "        \"\"\"\n",
-    "        The __init__ function is called when the class is instantiated.\n",
-    "        It sets the sender, receiver, performative and content of the message.\n",
-    "        \"\"\"\n",
     "        self.agent_id = agent_id\n",
     "        self.action = action\n",
     "        self.cell = cell\n",
@@ -87,11 +74,7 @@
     "        Looking_Direction: {self.looking_direction}\"\n",
     "    \n",
     "    def add_move(self):\n",
-    "        \"\"\"\n",
-    "        The send function is used to send a message to the environment buffer.\n",
-    "        \"\"\"\n",
     "        Move.rounds[Move.curr_round].append(self)\n",
-    "        #Message.environment_buffer.append(self)\n",
     "    \n",
     "    @classmethod\n",
     "    def start_new_round(cls):\n",
@@ -1213,7 +1196,6 @@
     "        self.hector_agents = ap.AgentList(self, self.p.hector_agents, HectorAgent)\n",
     "        self.pepe_agents = ap.AgentList(self, self.p.pepe_agents, PepeAgent)\n",
     "        self.oscar_agents = ap.AgentList(self, self.p.oscar_agents, OscarAgent)\n",
-    "        # TODO: self.box_agents = ap.AgentList(self, 5, BoxAgent) # I think its only one agent, so it can have this name\n",
     "        \n",
     "        self.all_agents = self.random_agents  + self.rodrigo_agents + self.sergio_agents + self.hector_agents + self.pepe_agents + self.oscar_agents# be careful, there can only be 5 of them\n",
     "        for idx, agent in enumerate(self.all_agents):\n",
@@ -1245,27 +1227,13 @@
     "        self.all_agents.move()\n",
     "\n",
     "    def update(self):\n",
-    "        # TODO: All recording of agent positions and actions can be done here\n",
     "        pass\n",
     "\n",
     "    def end(self):\n",
-    "        # print()\n",
-    "        # if not self.is_board_clean:\n",
-    "        #     print(\"La limpieza no acabo, se llego al tiempo maximo\")\n",
-    "        # else:\n",
-    "        #     print(f\"Tiempo de limpieza: {time_taken} pasos\")\n",
-    "            \n",
-    "        # print(f\"Porcentaje de celdas limpiadas: {cleaned_percentage:.2f}%\")\n",
-    "        # print(f\"Porcentaje de celdas limpias: {clean_percentage:.2f}%\")\n",
-    "        # print(f\"Total de movimientos: {self.total_moves}\")\n",
     "        \n",
     "        self.report('total_moves', self.total_moves)\n",
     "        self.report('time_taken', self.finish_time)\n",
     "        self.report('percentage_time_taken', self.finish_time / self.p.steps)\n",
-    "        # print('Total moves until finish:', self.total_moves)\n",
-    "        # print('Time taken to finish:', self.finish_time)\n",
-    "        # print('Percentage of time taken, considering total time available:', self.finish_time / self.p.steps)\n",
-    "        # self.report('rounds', Move.rounds)\n",
     "        self.rounds = Move.rounds\n",
     "    \n",
     "    \n",
